--- a/index.html
+++ b/index.html
@@ -282,21 +282,80 @@ function selectSkin(skinFile) {
 
 player.style.top = lanes[currentLane] + "px";
 
-// ▼ 最初のキー押しでBGM再生＋プレイヤー移動
+// // ▼ 最初のキー押しでBGM再生＋プレイヤー移動
+// document.addEventListener("keydown", (e) => {
+//     if (!started) {
+//         bgm.volume = 0.1;
+//         bgm.play().catch(e => console.log("BGM再生失敗", e));
+//         started = true;
+//     }
+//     if (e.key === "ArrowUp" && currentLane > 0) {
+//         currentLane--;
+//     } else if (e.key === "ArrowDown" && currentLane < 2) {
+//         currentLane++;
+//     }
+//     player.style.top = lanes[currentLane] + "px";
+// });
+// ▼ 最初のキー押しでBGM再生＋プレイヤー移動 (既存のコード)
 document.addEventListener("keydown", (e) => {
+    // ゲームがまだ始まっていない場合、BGMを再生
+    // モバイルブラウザの自動再生ポリシーを考慮し、タッチイベントでも同様の処理を行います
     if (!started) {
         bgm.volume = 0.1;
-        bgm.play().catch(e => console.log("BGM再生失敗", e));
+        // BGM再生に失敗した場合のログ出力
+        bgm.play().catch(error => console.log("BGM再生失敗:", error));
         started = true;
     }
+
+    // キーボードの矢印キーでレーンを移動
     if (e.key === "ArrowUp" && currentLane > 0) {
-        currentLane--;
-    } else if (e.key === "ArrowDown" && currentLane < 2) {
-        currentLane++;
+        currentLane--; // 上方向へ移動
+    } else if (e.key === "ArrowDown" && currentLane < 2) { // レーンの最大数を2と仮定
+        currentLane++; // 下方向へ移動
     }
+    // プレイヤーの要素の位置を更新
     player.style.top = lanes[currentLane] + "px";
 });
 
+// --- スマートフォン対応のためのタッチイベント ---
+
+let touchStartY = 0; // タッチ開始時のY座標を保持する変数
+
+// ▼ タッチ開始時の処理
+document.addEventListener("touchstart", (e) => {
+    // ゲームがまだ始まっていない場合、BGMを再生
+    // モバイルではユーザーの操作がないとBGMが再生されない場合があるため、ここにも記述
+    if (!started) {
+        bgm.volume = 0.1;
+        bgm.play().catch(error => console.log("BGM再生失敗:", error));
+        started = true;
+    }
+    // 最初の指のタッチ位置のY座標を記録
+    touchStartY = e.touches[0].clientY;
+});
+
+// ▼ タッチ終了時の処理（スワイプ判定）
+document.addEventListener("touchend", (e) => {
+    // 指を離した時のY座標を取得
+    const touchEndY = e.changedTouches[0].clientY;
+    // スワイプのY方向の移動量を計算
+    const touchDiff = touchEndY - touchStartY;
+
+    // スワイプと認識するためのしきい値（ピクセル）。この値を調整して感度を変えられます
+    const swipeThreshold = 30;
+
+    // 上方向へのスワイプ判定（指を上に動かすとY座標は減少する）
+    if (touchDiff < -swipeThreshold && currentLane > 0) {
+        currentLane--; // レーンを上に移動
+    } 
+    // 下方向へのスワイプ判定（指を下に動かすとY座標は増加する）
+    else if (touchDiff > swipeThreshold && currentLane < 2) { // レーンの最大数を2と仮定
+        currentLane++; // レーンを下に移動
+    }
+    // プレイヤーの要素の位置を更新
+    player.style.top = lanes[currentLane] + "px";
+});
+  
 // ▼ ゲーム開始ボタン
 document.getElementById("start-button").addEventListener("click", function() {
     document.getElementById("title-screen").style.display = "none";
