--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.85">
   <meta name="description" content="計算で加速！走り続ける脳トレアクションゲーム - 計算疾走！RUN×算">
-<!--   <title>計算疾走！RUN×算</title> -->
-  <title>計算疾走！RUN</title>
+  <title>計算疾走！RUN×算</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
