--- a/index.html
+++ b/index.html
@@ -294,40 +294,78 @@ const INITIAL_BGM_PLAYBACK_RATE = 1.0;
 let currentBaseBGMPlaybackRate = INITIAL_BGM_PLAYBACK_RATE; // スコアに応じて永続的に変化するBGMの基準レート
 
 let isAccelerating = false; // 加速中かどうかのフラグ
-// --- スマホ用スワイプ操作 ---
-let touchStartY = 0;
-let touchEndY = 0;
 
-document.addEventListener("touchstart", (e) => {
-    if (!started) {
-        bgm.volume = 0.1;
-        bgm.play().catch(error => console.log("BGM再生失敗", error));
-        started = true;
-        bgm.playbackRate = INITIAL_BGM_PLAYBACK_RATE;
-    }
+let touchStartY = 0; // タッチ開始時のY座標を保存
+let touchStartX = 0; // タッチ開始時のX座標を保存
+const SWIPE_THRESHOLD = 50; // スワイプと認識するための最低ピクセル距離
 
-    touchStartY = e.changedTouches[0].clientY;
-}, { passive: true });
+// ゲーム画面の要素を取得
+const gameArea = document.getElementById("game");
 
-document.addEventListener("touchend", (e) => {
-    touchEndY = e.changedTouches[0].clientY;
-    const deltaY = touchStartY - touchEndY;
+// gameAreaが存在する場合のみイベントリスナーを設定
+if (gameArea) {
+    let touchStartY = 0; // タッチ開始時のY座標を保存
+    let touchStartX = 0; // タッチ開始時のX座標を保存
+    const SWIPE_THRESHOLD = 50; // スワイプと認識するための最低ピクセル距離
 
-    // スワイプ判定のしきい値（例: 30px以上動かしたら反応）
-    const swipeThreshold = 30;
+    // タッチ開始時のイベントリスナー
+    gameArea.addEventListener("touchstart", (e) => {
+        touchStartY = e.touches[0].clientY;
+        touchStartX = e.touches[0].clientX;
 
-    if (Math.abs(deltaY) > swipeThreshold) {
-        if (deltaY > 0 && currentLane > 0) {
-            // 上にスワイプ → 上のレーンへ
-            currentLane--;
-        } else if (deltaY < 0 && currentLane < 2) {
-            // 下にスワイプ → 下のレーンへ
-            currentLane++;
+        // BGM再生開始ロジックも、ゲームエリアでの最初のタッチに合わせる
+        if (!started) {
+            bgm.volume = 0.1;
+            bgm.play().catch(error => console.log("BGM再生失敗", error));
+            started = true;
+            bgm.playbackRate = INITIAL_BGM_PLAYBACK_RATE;
         }
-        player.style.top = lanes[currentLane] + "px";
-    }
-}, { passive: true });
+        // ここでは e.preventDefault() は不要 (touchmove で行うため)
+    }, { passive: true });
 
+    // タッチ移動時のイベントリスナー
+    gameArea.addEventListener("touchmove", (e) => {
+        // ★ここが重要★：ゲーム画面上でのスワイプによるブラウザのデフォルトスクロール動作を停止
+        e.preventDefault(); 
+    }, { passive: false }); // preventDefault() を使うので passive は false にする
+
+    // タッチ終了時のイベントリスナー
+    gameArea.addEventListener("touchend", (e) => {
+        const touchEndY = e.changedTouches[0].clientY;
+        const touchEndX = e.changedTouches[0].clientX;
+
+        const deltaY = touchStartY - touchEndY;
+        const deltaX = touchEndX - touchStartX;
+
+        // 縦方向のスワイプ（レーン変更）を処理
+        if (Math.abs(deltaY) > SWIPE_THRESHOLD && Math.abs(deltaY) > Math.abs(deltaX)) {
+            if (deltaY > 0 && currentLane > 0) { // 上へスワイプ
+                currentLane--;
+                console.log("上にスワイプ！現在のレーン:", currentLane);
+            } else if (deltaY < 0 && currentLane < 2) { // 下へスワイプ
+                currentLane++;
+                console.log("下にスワイプ！現在のレーン:", currentLane);
+            }
+            player.style.top = lanes[currentLane] + "px";
+        }
+        // 横方向のスワイプ（加速/減速）を処理
+        else if (Math.abs(deltaX) > SWIPE_THRESHOLD && Math.abs(deltaX) > Math.abs(deltaY)) {
+            if (deltaX > 0 && !isAccelerating) { // 右へスワイプ（加速）
+                speed = baseGameSpeed * 2;
+                bgm.playbackRate = currentBaseBGMPlaybackRate * 2;
+                isAccelerating = true;
+                console.log("右にスワイプ！速度2倍！現在の速度:", speed);
+                console.log("BGM再生レート2倍！新しいレート:", bgm.playbackRate);
+            } else if (deltaX < 0 && isAccelerating) { // 左へスワイプ（減速）
+                 speed = baseGameSpeed;
+                 bgm.playbackRate = currentBaseBGMPlaybackRate;
+                 isAccelerating = false;
+                 console.log("左にスワイプ！速度が通常に戻る！現在の速度:", speed);
+                 console.log("BGM再生レートが通常に戻る！現在のレート:", bgm.playbackRate);
+            }
+        }
+    });
+}
 
 // ▼ ゲーム開始ボタン
 document.getElementById("start-button").addEventListener("click", function() {
