--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         z-index: 2000; /* Ensure it's on top */
     }
     #title-screen h1 {
-        font-size: 5vw; /* 変更: 6vwから5vwに縮小 */
+        font-size: 4vw; /* 変更: 6vwから5vwに縮小 */
         color: #333;
     }
     #start-button, #adult-mode-button {
         margin-top: 2.2vh; /* 変更: 2.5vhから2.2vhに縮小 */
         padding: 1.8vh 3.5vw; /* 変更: 2vh 4vw から縮小 */
-        font-size: 2.2vw; /* 変更: 2.5vwから2.2vwに縮小 */
+        font-size: 1.8vw; /* 変更: 2.5vwから2.2vwに縮小 */
         background-color: #4CAF50;
         color: white;
         border: none;
@@ -67,7 +67,7 @@
         margin-top: 2.2vh; /* 変更: 2.5vhから2.2vhに縮小 */
     }
     #skin-select p {
-        font-size: 2.2vw; /* 変更: 2.5vwから2.2vwに縮小 */
+        font-size: 2vw; /* 変更: 2.5vwから2.2vwに縮小 */
     }
     #skin-select div {
         display: flex;
@@ -104,11 +104,11 @@
         max-width: 380px; /* 変更: 400pxから380pxに縮小 */
     }
     #ranking-modal h2 {
-        font-size: 3.5vw; /* 変更: 4vwから3.5vwに縮小 */
+        font-size: 3vw; /* 変更: 4vwから3.5vwに縮小 */
         margin-bottom: 1.8vh; /* 変更: 2vhから1.8vhに縮小 */
     }
     #ranking-modal p, #ranking-modal h3 {
-        font-size: 2.2vw; /* 変更: 2.5vwから2.2vwに縮小 */
+        font-size: 2vw; /* 変更: 2.5vwから2.2vwに縮小 */
         margin-bottom: 0.8vh; /* 変更: 1vhから0.8vhに縮小 */
     }
     #ranking-list {
@@ -123,14 +123,14 @@
     }
     #ranking-list li {
         margin: 0.6vh 0; /* 変更: 0.8vhから0.6vhに縮小 */
-        font-size: 1.8vw; /* 変更: 2vwから1.8vwに縮小 */
+        font-size: 1.6vw; /* 変更: 2vwから1.8vwに縮小 */
         font-weight: bold;
         color: #333;
     }
     #ranking-modal button {
         margin-top: 2.2vh; /* 変更: 2.5vhから2.2vhに縮小 */
         padding: 1.3vh 2.8vw; /* 変更: 1.5vh 3vw から縮小 */
-        font-size: 2vw; /* 変更: 2.2vwから2vwに縮小 */
+        font-size: 1.8vw; /* 変更: 2.2vwから2vwに縮小 */
         background: #4CAF50;
         color: white;
         border: none;
@@ -184,30 +184,30 @@
     /* ゲームUI要素 (Game UI Elements) */
     /* ------------------------------------------------------------- */
     h1 { /* "↑↑でレーン移動！ →で加速" heading */
-        font-size: 2.8vw; /* 変更: 3vwから2.8vwに縮小 */
+        font-size: 2.4vw; /* 変更: 3vwから2.8vwに縮小 */
         margin-top: 0.8vh; /* 変更: 1vhから0.8vhに縮小 */
         margin-bottom: 0.8vh; /* 変更: 1vhから0.8vhに縮小 */
     }
     #question {
-        font-size: 2.8vw; /* 変更: 3vwから2.8vwに縮小 */
+        font-size: 2vw; /* 変更: 3vwから2.8vwに縮小 */
         margin-top: 0.8vh; /* 変更: 1vhから0.8vhに縮小 */
         margin-bottom: 0.8vh; /* 変更: 1vhから0.8vhに縮小 */
     }
     #target {
-        font-size: 4vw; /* 変更: 4.5vwから4vwに縮小 */
+        font-size: 3vw; /* 変更: 4.5vwから4vwに縮小 */
         color: #d32f2f;
         font-weight: bold;
         padding: 0 0.8vw; /* 変更: 1vwから0.8vwに縮小 */
         border-radius: 0.4vw; /* 変更: 0.5vwから0.4vwに縮小 */
     }
     #distance {
-        font-size: 2.2vw; /* 変更: 2.5vwから2.2vwに縮小 */
+        font-size: 1.8vw; /* 変更: 2.5vwから2.2vwに縮小 */
         margin-top: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
         margin-bottom: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
     }
     #lives {
         height: 4.5vh; /* 変更: 5vhから4.5vhに縮小 */
-        font-size: 3.2vw; /* 変更: 3.5vwから3.2vwに縮小 */
+        font-size: 2vw; /* 変更: 3.5vwから3.2vwに縮小 */
         line-height: 4.5vh; /* Match height for vertical centering */
         margin-top: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
         margin-bottom: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
@@ -248,9 +248,9 @@
         width: 12.5%; /* 100px / 800px = 12.5% of game width */
         height: 16.67%; /* 50px / 300px = ~16.67% of game height */
         background: rgba(173, 216, 230, 0.85);
-        font-size: 2.5vw; /* 変更: 2.75vwから2.5vwに縮小 */
+        font-size: 1.8vw; /* 変更: 2.75vwから2.5vwに縮小 */
         text-align: center;
-        line-height: 100%; /* Vertical align text within obstacle height */
+        line-height: 180%; /* Vertical align text within obstacle height */
         font-weight: bold;
         font-family: "Consolas", "Courier New", monospace;
         transform: translateZ(0);
@@ -526,6 +526,14 @@
             game.style.backgroundImage = `url('${backgrounds[0]}')`; // Reset background
             game.style.opacity = 1; // Ensure full opacity
             bgm.currentTime = 0; // Reset BGM
+
+            // ★追加: ここでisSpawningを確実にfalseにリセットします★
+            isSpawning = false; 
+            
+            // Remove all existing obstacles from the game area before starting a new round
+            document.querySelectorAll('.obstacle').forEach(obstacle => {
+                obstacle.remove();
+            });
             
             // Only play BGM if not already started by touch (for first touch case)
             if (!started) {
@@ -535,6 +543,7 @@
             }
             spawnChallenge();
         }
+
 
         function restartGame() {
             document.getElementById("ranking-modal").style.display = "none";
@@ -642,11 +651,6 @@
                     currentObstaclePos -= speed; // Move obstacle based on current game speed
                     obstacle.style.left = currentObstaclePos + "px";
 
-                    // Collision detection logic
-                    // Calculate visual player and obstacle dimensions in pixels based on current game width
-                    // Original player left was 50px (50/800 = 6.25%)
-                    // Original player width was 50px (50/800 = 6.25%)
-                    // Original obstacle width was 100px (100/800 = 12.5%)
                     const playerVisualLeft = game.offsetWidth * (50 / 800); 
                     const playerVisualWidth = game.offsetWidth * (50 / 800); 
                     const obstacleVisualWidth = game.offsetWidth * (100 / 800); 
@@ -859,11 +863,11 @@
                 img.src = entry.skin || "default.gif"; // Fallback in case skin is missing
                 img.alt = "skin";
                 // Scale image based on current game area width, similar to player/obstacle
-                img.style.width = `${game.offsetWidth * (24 / 800)}px`; // 変更: 32pxから24pxに縮小
-                img.style.height = `${game.offsetWidth * (24 / 800)}px`; // Keep it square, 変更: 32pxから24pxに縮小
+                img.style.width = `${game.offsetWidth * (18 / 800)}px`; // 変更: 32pxから24pxに縮小
+                img.style.height = `${game.offsetWidth * (18 / 800)}px`; // Keep it square, 変更: 32pxから24pxに縮小
                 img.style.verticalAlign = "middle";
-                img.style.marginLeft = `${game.offsetWidth * (6 / 800)}px`; // 変更: 8pxから6pxに縮小
-                img.style.borderRadius = `${game.offsetWidth * (4 / 800)}px`; // 変更: 5pxから4pxに縮小
+                img.style.marginLeft = `${game.offsetWidth * (4 / 800)}px`; // 変更: 8pxから6pxに縮小
+                img.style.borderRadius = `${game.offsetWidth * (3 / 800)}px`; // 変更: 5pxから4pxに縮小
 
                 li.appendChild(rankText);
                 li.appendChild(img);
