--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@
         background: url('上空.jpg') repeat-x center center;
         background-size: cover;
         border: 0.2vw solid #000; /* 変更: 0.25vwから0.2vwに縮小 */
-        margin: 1.8vh auto; /* 変更: 2vhから1.8vhに縮小 */
+        margin: 0 auto; /* 変更: 2vhから1.8vhに縮小 */
+        max-height: 70vh;
+        max-height: 70dvh;
+        box-sizing: border-box;
         overflow: hidden;
         background-position: 0 0;
         
