--- a/index.html
+++ b/index.html
@@ -194,25 +194,25 @@
     /* ------------------------------------------------------------- */
     h1 { /* "↑↑でレーン移動！ →で加速" heading */
         font-size: 2.4vw; /* 変更: 3vwから2.8vwに縮小 */
-        margin-top: 0.4vh; /* 変更: 1vhから0.8vhに縮小 */
-        margin-bottom: 0.4vh; /* 変更: 1vhから0.8vhに縮小 */
+        margin-top: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
+        margin-bottom: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
     }
     #question {
         font-size: 2vw; /* 変更: 3vwから2.8vwに縮小 */
-        margin-top: 0.4vh; /* 変更: 1vhから0.8vhに縮小 */
-        margin-bottom: 0.4vh; /* 変更: 1vhから0.8vhに縮小 */
+        margin-top: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
+        margin-bottom: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
     }
     #target {
         font-size: 3vw; /* 変更: 4.5vwから4vwに縮小 */
         color: #d32f2f;
         font-weight: bold;
-        padding: 0 0.4vw; /* 変更: 1vwから0.8vwに縮小 */
-        border-radius: 0.2vw; /* 変更: 0.5vwから0.4vwに縮小 */
+        padding: 0 1.0vw; /* 変更: 1vwから0.8vwに縮小 */
+        border-radius: 0.6vw; /* 変更: 0.5vwから0.4vwに縮小 */
     }
     #distance {
         font-size: 1.8vw; /* 変更: 2.5vwから2.2vwに縮小 */
-        margin-top: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
-        margin-bottom: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
+        margin-top: 0.8vh; /* 変更: 0.5vhから0.4vhに縮小 */
+        margin-bottom: 0.8vh; /* 変更: 0.5vhから0.4vhに縮小 */
     }
     #lives {
         height: 4.5vh; /* 変更: 5vhから4.5vhに縮小 */
