--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         color: #333;
     }
     #start-button, #adult-mode-button {
-        margin-top: 2.2vh; /* 変更: 2.5vhから2.2vhに縮小 */
-        padding: 1.8vh 3.5vw; /* 変更: 2vh 4vw から縮小 */
+        margin-top: 2.4vh; /* 変更: 2.5vhから2.2vhに縮小 */
+        padding: 1.8vh 3.0vw; /* 変更: 2vh 4vw から縮小 */
         font-size: 1.8vw; /* 変更: 2.5vwから2.2vwに縮小 */
         background-color: #4CAF50;
         color: white;
@@ -168,15 +168,15 @@
     #game {
         position: relative;
         aspect-ratio: 8 / 3; /* Maintain 800:300 ratio */
-        width: 80vw; /* ★変更点1★ 90vwから80vwに縮小 */
-        max-width: 720px; /* ★変更点2★ 800pxから720pxに縮小 (元の90%に相当) */
+        width: 70vw; /* ★変更点1★ 90vwから80vwに縮小 */
+        max-width: 630px; /* ★変更点2★ 800pxから720pxに縮小 (元の90%に相当) */
         
         background: url('上空.jpg') repeat-x center center;
         background-size: cover;
         border: 0.2vw solid #000; /* 変更: 0.25vwから0.2vwに縮小 */
         margin: 0 auto; /* 変更: 2vhから1.8vhに縮小 */
-        max-height: 70vh;
-        max-height: 70dvh;
+        max-height: 500vh;
+        max-height: 500dvh;
         box-sizing: border-box;
         overflow: hidden;
         background-position: 0 0;
@@ -194,25 +194,25 @@
     /* ------------------------------------------------------------- */
     h1 { /* "↑↑でレーン移動！ →で加速" heading */
         font-size: 2.4vw; /* 変更: 3vwから2.8vwに縮小 */
-        margin-top: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
-        margin-bottom: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
+        margin-top: 5px; /* 変更: 1vhから0.8vhに縮小 */
+        margin-bottom: 5px; /* 変更: 1vhから0.8vhに縮小 */
     }
     #question {
         font-size: 2vw; /* 変更: 3vwから2.8vwに縮小 */
-        margin-top: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
-        margin-bottom: 1.vh; /* 変更: 1vhから0.8vhに縮小 */
+        margin-top: 5px; /* 変更: 1vhから0.8vhに縮小 */
+        margin-bottom: 5px; /* 変更: 1vhから0.8vhに縮小 */
     }
     #target {
         font-size: 3vw; /* 変更: 4.5vwから4vwに縮小 */
         color: #d32f2f;
         font-weight: bold;
-        padding: 0 1.0vw; /* 変更: 1vwから0.8vwに縮小 */
-        border-radius: 0.6vw; /* 変更: 0.5vwから0.4vwに縮小 */
+        padding: 0 0.8vw; /* 変更: 1vwから0.8vwに縮小 */
+        border-radius: 0.4vw; /* 変更: 0.5vwから0.4vwに縮小 */
     }
     #distance {
         font-size: 1.8vw; /* 変更: 2.5vwから2.2vwに縮小 */
-        margin-top: 0.8vh; /* 変更: 0.5vhから0.4vhに縮小 */
-        margin-bottom: 0.8vh; /* 変更: 0.5vhから0.4vhに縮小 */
+        margin-top: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
+        margin-bottom: 0.4vh; /* 変更: 0.5vhから0.4vhに縮小 */
     }
     #lives {
         height: 4.5vh; /* 変更: 5vhから4.5vhに縮小 */
