--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         color: #333;
     }
     #start-button, #adult-mode-button {
-        margin-top: 2.4vh; /* 変更: 2.5vhから2.2vhに縮小 */
-        padding: 1.8vh 3.0vw; /* 変更: 2vh 4vw から縮小 */
-        font-size: 1.8vw; /* 変更: 2.5vwから2.2vwに縮小 */
+        margin-top: 2.4vh; 
+        padding: 1.8vh 3.0vw; 
+        font-size: 1.8vw; 
         background-color: #4CAF50;
         color: white;
         border: none;
-        border-radius: 0.8vw; /* 変更: 1vwから0.8vwに縮小 */
+        border-radius: 0.8vw; 
         cursor: pointer;
         transition: background-color 0.3s;
     }
@@ -168,15 +168,15 @@
     #game {
         position: relative;
         aspect-ratio: 8 / 3; /* Maintain 800:300 ratio */
-        width: 70vw; /* ★変更点1★ 90vwから80vwに縮小 */
-        max-width: 630px; /* ★変更点2★ 800pxから720pxに縮小 (元の90%に相当) */
+        width: 80vw; 
+        max-width: 720px; 
         
         background: url('上空.jpg') repeat-x center center;
         background-size: cover;
-        border: 0.2vw solid #000; /* 変更: 0.25vwから0.2vwに縮小 */
-        margin: 0 auto; /* 変更: 2vhから1.8vhに縮小 */
-        max-height: 500vh;
-        max-height: 500dvh;
+        border: 0.2vw solid #000; 
+        margin: 0 auto; 
+        max-height: 70vh;
+        max-height: 70dvh;
         box-sizing: border-box;
         overflow: hidden;
         background-position: 0 0;
@@ -194,8 +194,8 @@
     /* ------------------------------------------------------------- */
     h1 { /* "↑↑でレーン移動！ →で加速" heading */
         font-size: 2.4vw; /* 変更: 3vwから2.8vwに縮小 */
-        margin-top: 5px; /* 変更: 1vhから0.8vhに縮小 */
-        margin-bottom: 5px; /* 変更: 1vhから0.8vhに縮小 */
+        margin-top: 0px; /* 変更: 1vhから0.8vhに縮小 */
+        margin-bottom: 0px; /* 変更: 1vhから0.8vhに縮小 */
     }
     #question {
         font-size: 2vw; /* 変更: 3vwから2.8vwに縮小 */
