--- a/index.html
+++ b/index.html
@@ -206,9 +206,10 @@
         margin-bottom: 0px; /* 変更: 1vhから0.8vhに縮小 */
     }
     #question {
-        font-size: 2vw; /* 変更: 3vwから2.8vwに縮小 */
-        margin-top: 0px; /* 変更: 1vhから0.8vhに縮小 */
-        margin-bottom: 0px; /* 変更: 1vhから0.8vhに縮小 */
+        font-size: 2vw;
+        margin-top: 0.2vh;       
+        margin-bottom: 0.2vh;
+        line-height: 1.1;        /* 行間も詰める */
     }
     #target {
         font-size: 3vw; /* 変更: 4.5vwから4vwに縮小 */
