--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         background: rgba(173, 216, 230, 0.85);
         font-size: 2.8vw; /* 変更: 2.75vwから2.5vwに縮小 */
         text-align: center;
-        line-height: 200%; /* Vertical align text within obstacle height */
+        line-height: 180%; /* Vertical align text within obstacle height */
         font-weight: bold;
         font-family: "Consolas", "Courier New", monospace;
         transform: translateZ(0);
@@ -340,8 +340,10 @@
     <div id="ui-container">
         <h1>↑↑でレーン移動！　→で加速</h1>
         <div id="question">答えが <span id="target">?</span> になる式を選ぼう！</div>
-        <div id="distance">00000m</div>
-        <div id="lives">❤️❤️❤️</div>
+        <div id="game-stats" style="display: flex; justify-content: center; align-items: center; gap: 3vw;">
+            <div id="distance">00000m</div>
+            <div id="lives">❤️❤️❤️</div>
+        </div>
         <div id="combo-bar-container">
             <div id="combo-bar"></div>
     </div>
@@ -866,7 +868,7 @@
             const medals = ["🥇", "🥈", "🥉"];
 
             // Display top 7 or fewer if less are ranked
-            rankings.slice(0, 7).forEach((entry, i) => {
+            rankings.slice(0, 3).forEach((entry, i) => {
                 const li = document.createElement("li");
                 
                 // Add medal or rank number
