--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <audio id="se-wrong" src="ビープ音4.mp3"></audio>
 
         <div id="ui-container">
-            <h1>↑↑でレーン移動！　→で加速</h1>
+            <h1>↑↓でレーン移動！　→で加速</h1>
             <div id="question">答えが <span id="target">?</span> になる式を選ぼう！</div>
             <div id="game-stats" style="display: flex; justify-content: center; align-items: center; gap: 3vw;">
                 <div id="distance">00000m</div>
