--- a/index.html
+++ b/index.html
@@ -281,7 +281,6 @@
             color: #fff;
             text-shadow: 0.1vw 0.1vw 0.2vw #000; /* 変更: 0.125vw 0.125vw 0.25vw から縮小 */
         }
-
         /* ------------------------------------------------------------- */
         /* コンボゲージ (Combo Bar) */
         /* ------------------------------------------------------------- */
@@ -295,6 +294,78 @@
             overflow: hidden;
             border: 0.2vw solid #333; /* 変更: 0.25vwから0.2vwに縮小 */
         }
+
+        /* ------------------------------------------------------------- */
+        /* 縦画面モードの調整 (Portrait Mode Adjustments) */
+        /* ------------------------------------------------------------- */
+        @media (orientation: portrait) {
+            /* ゲームUI要素 (Game UI Elements) */
+            h1 { /* "↑↑でレーン移動！ →で加速" heading */
+                /* 縦画面では高さを基準にフォントサイズを調整 (vh) */
+                font-size: 3.5vh; /* 横画面のvwよりも大きく見えるように調整 */
+                margin-top: 1vh;
+                margin-bottom: 1vh;
+            }
+            #question {
+                font-size: 2.8vh;
+                margin-top: 0.5vh;
+                margin-bottom: 0.5vh;
+            }
+            #target {
+                font-size: 4.5vh;
+                padding: 0 1vh; /* パディングもvhで調整 */
+            }
+            #distance {
+                font-size: 2.5vh;
+                margin-top: 0.8vh;
+                margin-bottom: 0.8vh;
+            }
+            #lives {
+                height: 6vh; /* ライフ表示を縦に大きくする */
+                font-size: 3vh; /* フォントサイズも大きくする */
+                line-height: 6vh; /* 縦中央揃えのために高さを合わせる */
+                margin-top: 0.8vh;
+                margin-bottom: 0.8vh;
+            }
+
+            /* レーン (Lanes) */
+            .lane {
+                /* レーンのボーダーも調整 */
+                border-top: 0.15vh solid #ccc; /* 縦画面では高さを基準に太さを調整 */
+            }
+
+            /* プレイヤー (Player) */
+            #player {
+                /* 縦画面ではプレイヤーの幅と高さの比率を再考 */
+                width: 10%; /* 縦画面の幅に対する割合を調整 */
+                height: 10%; /* 縦画面の高さに対する割合を調整 */
+                left: 5%; /* 画面左からの位置も調整 */
+                background-size: 80%; /* GIFのサイズも調整 */
+            }
+
+            /* 障害物 (Obstacles) */
+            .obstacle {
+                width: 20%; /* 縦画面での幅を調整 */
+                height: 10%; /* 縦画面での高さを調整 */
+                font-size: 3vh; /* フォントサイズもvhで調整 */
+                line-height: 100%; /* 高さに対して調整 */
+                border: 0.4vh solid #007acc; /* ボーダーの太さもvhで調整 */
+                border-radius: 2vh; /* 角丸もvhで調整 */
+                box-shadow: 0.4vh 0.4vh 1.2vh rgba(0, 0, 0, 0.3); /* 影もvhで調整 */
+                text-shadow: 0.2vh 0.2vh 0.4vh #000; /* テキストの影もvhで調整 */
+            }
+
+            /* コンボゲージ (Combo Bar) */
+            #combo-bar-container {
+                width: 60vw; /* 縦画面では幅をvwで調整 */
+                max-width: 90%; /* 最大幅も設定するが、vwが効くように調整 */
+                height: 3.5vh; /* 高さもvhで調整 */
+                border-radius: 1.5vh; /* 角丸もvhで調整 */
+                margin: 2vh auto; /* マージンもvhで調整 */
+                border: 0.4vh solid #333; /* ボーダーもvhで調整 */
+            }
+        }
+        
         #combo-bar {
             height: 100%;
             width: 0%;
@@ -308,6 +379,7 @@
         .combo-flash {
             animation: flashCombo 0.5s ease;
         }
+
     </style>
     <body>
 
@@ -338,7 +410,7 @@
         <audio id="se-wrong" src="ビープ音4.mp3"></audio>
 
         <div id="ui-container">
-            <h1>↑↓でレーン移動！　→で加速</h1>
+            <h1>↑↑でレーン移動！　→で加速</h1>
             <div id="question">答えが <span id="target">?</span> になる式を選ぼう！</div>
             <div id="game-stats" style="display: flex; justify-content: center; align-items: center; gap: 3vw;">
                 <div id="distance">00000m</div>
